# knowledge-sherpa

./: .env  .gitignore  config.env  docker-compose.yml  markdown_processor.py  obsidian_to_wp.py  obsidian_to_wp_v2.py  pyproject.toml  wp_polylang_publisher.py  wp_publisher.py
obsidian_to_wordpress.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: language_manager.py  markdown_processor.py  obsidian_to_wp_v2.py  wp_polylang_publisher.py
src/: .env.example  docker-compose.yml
src/wp-content/plugins/: polylang-rest-connector.php
src/wp-content/plugins/content-views-query-and-display-post-page/: README.txt  content-views.php
src/wp-content/plugins/easy-table-of-contents/: README.txt  changelog.txt  easy-table-of-contents.php
src/wp-content/plugins/easy-table-of-contents/includes/: class-eztoc-option.php  class-eztoc-post.php  class-eztoc-widgetsticky.php
src/wp-content/plugins/wordpress-popular-posts/: readme.txt
src/wp-content/themes/generatepress-child/: archive.php  content.php  front-page.php  functions.php  single.php  style.css
